--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "effect": "2.0.0-next.54",
     "typescript": "^5.2.2"
+  },
+  "peerDependencies": {
+    "effect": "2.0.0-next.54"
   }
 }
