--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "effect-fetch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --w"
+    "dev": "tsc --w",
+    "example": "ts-node --esm --project tsconfig.json ./example/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "effect": "2.0.0-next.54",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
