--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "homepage": "https://github.com/joshamaju/effect-fetch",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --w",
-    "example": "ts-node --esm --project tsconfig.json ./example/index.ts"
+    "docs": "docgen"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@effect/docgen": "^0.3.4",
     "effect": "2.0.0-next.54",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
