--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "vitest": "^1.0.4"
   },
   "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/dts/index.d.ts"
+    },
     "./Fetch": {
       "import": "./dist/Fetch.js",
       "types": "./dist/dts/Fetch.d.ts"
