--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@effect/docgen": "^0.3.4",
-    "effect": "2.0.0-next.61",
+    "effect": "^2.0.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
@@ -81,6 +81,6 @@
     }
   },
   "peerDependencies": {
-    "effect": "2.0.0-next.61"
+    "effect": "^2.0.0"
   }
 }
